--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "team-profile-generator",
+  "name": "team-html-generator",
   "version": "1.0.0",
-  "description": "Your task is to build a Node.js command-line application that takes in information about employees on a software engineering team, then generates an HTML webpage that displays summaries for each person. Testing is key to making code maintainable, so you’ll also write a unit test for every part of your code and ensure that it passes each test.",
+  "description": "\"allows the team to see a description of each other\"",
   "main": "index.js",
-  "dependencies": {
-    "inquirer": "^8.1.1"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ToddKelly/Team-profile-generator.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Todd",
+  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ToddKelly/Team-profile-generator/issues"
+    "url": "https://github.com/ToddKelly/Team-profile-generator.git"
   },
-  "homepage": "https://github.com/ToddKelly/Team-profile-generator#readme"
+  "homepage": "https://github.com/ToddKelly/Team-profile-generator.git",
+  "dependencies": {
+    "inquirer": "^8.0.0",
+    "jest": "^26.6.3"
+  }
 }
